# rust-terminal

./: README.md  package.json  pnpm-lock.yaml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  pty_conn.rs  shell_list.rs  ssh_conn.rs  state.rs
src/router/: index.ts
