[package]
name = "rust-terminal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.40.0"
portable-pty = "0.8.1"
anyhow = "1.0.89"
futures = "0.3.30"
russh = "0.45.0"
async-trait = "0.1.82"
nix = "0.25.1"
dirs = "5.0.1"
uuid = { version = "1.10.0", features = ["v4"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
